--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
 
 
 {
-	"ip":"Rayfermbah.aternos.me",
+	"ip":"rayfermbah.aternos.me",
 	"port": "55521",
-	"name": "Oskar",
+	"name": "Oskarprintil",
 	"auto-night-skip":"false"
 }
